Updates to Makefile and pwm signals

--- a/Controller/Makefile
+++ b/Controller/Makefile
@@ -1,2 +1,18 @@
+HMSG = $(shell echo | This version moves servo with HARDWARE pwm signals |)
+SMSG = $(shell echo | This version moves servo with SOFTWARE pwm signals |)
+MSG = $(shell echo 'make hard' or 'make soft')
+
 all:
-	gcc main.c -o exe `pkg-config --cflags --libs bluez` -lbluetooth
+	$(info $(MSG))
+
+hard:
+	$(info $(HMSG))
+	gcc hardPwmMain.c -o exehard `pkg-config --cflags --libs bluez` -lbluetooth -lwiringPi -lpthread
+	
+soft:
+	$(info $(SMSG))
+	gcc softPwmMain.c -o exesoft `pkg-config --cflags --libs bluez` -lbluetooth -lwiringPi -lpthread
+
+clean:
+	rm exe*
+
