--- a/Controller/.vscode/settings.json
+++ b/Controller/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "bluetooth.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "pthread.h": "c"
     }
 }
