--- a/User/.vscode/settings.json
+++ b/User/.vscode/settings.json
@@ -5,6 +5,7 @@
         "gtk_functions.h": "c",
         "rfcomm.h": "c",
         "unistd.h": "c",
-        "bt_functions.h": "c"
+        "bt_functions.h": "c",
+        "gtk.h": "c"
     }
 }
